# You must change these to your own details.
[package]
name = "wt_data_sheets_wasm"
description = ""
version = "0.1.0"
authors = ["FlareFlo"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/FlareFlo/wt_data_sheets_wasm"
homepage = "wt.flareflo.dev"
build = "build.rs"
rust-version = "1.69"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
#option z is supposdely smaller, but S has yielded around 11kb smaller results
opt-level = "s"
strip = true
debug = false
split-debuginfo = 'packed'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = true
codegen-units = 24
rpath = false

[features]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.84"

wt_ballistics_calc = { git = "https://github.com/FlareFlo/wt_ballistics_calc" }

wt_datamine_extractor = { git = "https://github.com/FlareFlo/wt_datamine_extractor" }

wt_sensor = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_sensor", features = ["reflect"] }

wt_blk = "0.1.2"

serde_json = "1.*"
serde = "1.*"
chrono = "0.4.19"
bevy_reflect = "0.9.1"
average = "^0.13.1"
csv = "^1.1.6"
build_timestamp = "^0.1.0"
wt_afterburner = "1.3.0"
url = "^2.3.1"

# Plotting for misisle ballistic display
plotters = "0.3.2"
plotters-canvas = "^0.3.0"


js-sys = "0.3.*"

reqwest-wasm = "0.11.*"

# Updating these two breaks things, and i cannot understand why
strum = "^0.24.1"
strum_macros = "^0.24.3"

lazy_static = "^1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
#[target."cfg(debug)".dependencies]
console_error_panic_hook = "0.1.*"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.36"
features = ["console", "Window", "Document", "Element", "HtmlElement", "Node", "HtmlCollection", "HtmlButtonElement", "HtmlCanvasElement"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.3.24"
js-sys = "0.3.*"
wasm-bindgen-futures = "0.4.33"

[build-dependencies]
const-gen = "^1.1.0"
wt_datamine_extractor = { git = "https://github.com/FlareFlo/wt_datamine_extractor" }
serde_json = "1.*"